--- a/java/micro-service/security/src/main/resources/templates/admin.html
+++ b/java/micro-service/security/src/main/resources/templates/admin.html
@@ -14,7 +14,7 @@
     <!-- Links -->
     <ul class="navbar-nav">
         <li class="nav-item dropdown">
-            <a id="user-menu" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+            <a id="customer-menu" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                aria-haspopup="true" aria-expanded="false">
                 <span sec:authentication="name">User</span>
             </a>
