--- a/java/micro-service/security/src/main/resources/templates/index.html
+++ b/java/micro-service/security/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a
-                        id="user-menu"
+                        id="customer-menu"
                         href="#"
                         class="dropdown-toggle"
                         data-toggle="dropdown"
